syntax = "proto3";

package raftpb;

enum EntryType {
  EntryNormal = 0;
  EntryConfChange = 1;
}

message Entry {
  EntryType Type = 1;
  uint64 Term = 2;
  uint64 Index = 3;
  bytes Data = 4;
}

message SnapshotMetadata {
  ConfState conf_state = 1;
  uint64 index = 2;
  uint64 term = 3;
}

message Snapshot {
  bytes data = 1;
  SnapshotMetadata metadata = 2;
}

enum MessageType {
  MsgHup = 0;
  MsgBeat = 1;
  MsgProp = 2;
  MsgApp = 3;
  MsgResp = 4;
  MsgVote = 5;
  MsgVoteResp = 6;
  MsgSnap = 7;
  MsgHeartbeat = 8;
  MsgHeartbeatResp = 9;
  MsgUnreachable = 10;
  MsgSnapStatus = 11;
  MsgCheckQuorum = 12;
  MsgTransferLeader = 13;
  MsgTimeoutNow = 14;
  MsgReadIndex = 15;
  MsgReadIndexResp = 16;
  MsgPreVote = 17;
  MsgPreVoteResp = 18;
}

message Message {
  MessageType type = 1;
  uint64 to = 2;
  uint64 from = 3;
  uint64 term = 4;
  uint64 logTerm = 5;
  uint64 index = 6;
  repeated Entry entries = 7;
  uint64 commit = 8;
  Snapshot snapshot = 9;
  bool reject = 10;
  uint64 rejectHint = 11;
  bytes context = 12;
}

message HardState {
  uint64 term = 1;
  uint64 vote = 2;
  uint64 commit = 3;
}

message ConfState { repeated uint64 nodes = 1; }

enum ConfChangeType {
  ConfChangeAddNode = 0;
  ConfChangeRemoveNode = 1;
  ConfChangeUpdateNode = 2;
}

message ConfChange {
  uint64 ID = 1;
  ConfChangeType Type = 2;
  uint64 NodeID = 3;
  bytes Context = 4;
}
